--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.0",
+    "axios": "^1.7.3",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
