--- a/angular.json
+++ b/angular.json
@@ -43,7 +43,8 @@
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "src/script.js"
             ],
             "server": "src/main.server.ts",
             "prerender": true,
