--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "^18.1.0",
     "@angular/core": "^18.1.0",
     "@angular/forms": "^18.1.0",
+    "@angular/material": "^18.1.3",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/platform-server": "^18.1.0",
@@ -24,7 +25,9 @@
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "express": "^4.18.2",
+    "google-charts": "^2.0.0",
     "jquery": "^3.7.1",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
