--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^18.1.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "bs-stepper": "^1.7.0",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "express": "^4.18.2",
@@ -40,6 +41,7 @@
     "@angular/compiler-cli": "^18.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.30",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
