--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.0",
+    "@worktile/gantt": "^17.0.0-next.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "bs-stepper": "^1.7.0",
     "chart.js": "^4.4.3",
+    "d3": "^7.9.0",
     "date-fns": "^3.6.0",
     "express": "^4.18.2",
     "google-charts": "^2.0.0",
     "jquery": "^3.7.1",
     "ng2-charts": "^6.0.1",
+    "ngx-gantt": "^0.3.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -39,6 +42,7 @@
     "@angular-devkit/build-angular": "^18.1.0",
     "@angular/cli": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
+    "@types/d3": "^7.4.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.30",
