--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "express": "^4.18.2",
     "google-charts": "^2.0.0",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "ng2-charts": "^6.0.1",
-    "ngx-gantt": "^0.3.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
