--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.1.0",
+    "@angular/cdk": "^18.2.0",
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
     "@angular/core": "^18.1.0",
@@ -23,6 +24,7 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.0",
     "@worktile/gantt": "^17.0.0-next.0",
+    "angular-resize-event": "^3.2.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "bs-stepper": "^1.7.0",
