--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
+    "@popperjs/core": "^2.11.8",
     "@worktile/gantt": "^17.0.0-next.0",
     "angular-resize-event": "^3.2.0",
     "axios": "^1.7.3",
