--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "ng2-charts": "^6.0.1",
+    "ngx-infinite-scroll": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
