--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "google-charts": "^2.0.0",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3",
     "ng2-charts": "^6.0.1",
     "ngx-infinite-scroll": "^18.0.0",
     "rxjs": "~7.8.0",
