--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.1.0",
-    "@angular/cdk": "^18.2.0",
+    "@angular/cdk": "^18.1.4",
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
     "@angular/core": "^18.1.0",
     "@angular/forms": "^18.1.0",
-    "@angular/material": "^18.1.3",
+    "@angular/material": "^18.1.4",
+    "@angular/material-moment-adapter": "^18.2.3",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/platform-server": "^18.1.0",
