--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
     "@worktile/gantt": "^17.0.0-next.0",
+    "angular-moment": "^1.3.0",
     "angular-resize-event": "^3.2.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
